2006-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: introduce configuration parameters
	for connection processing---limit of threads, time interval
	to detect 'busy' thread, time interval to observe processing
	threads, time interval to detect 'idle' thread
	[ready for termination]. Implemented concurrent
	connections processing by minimal number of threads with
	guarantee that blocking in processing of some connections
	don't lead to stop other connections processing [but
	within number of limit of processsing threads; the marginal
	case may be one thread per connect; adjust number
	of processing threads, if needed]. If number of
	processing threads unlimited [i.e. too big], too many
	threads created under heavy load, and resources
	used ineffective.

2006-09-22  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: use concurrent threads pool;
	special thread [observer] control threads creation;
	connection processing thread can detect that no more
	work and go away.
	
2006-09-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: revision of sockmgr_stream_MP;
	pass ready for read sockets to processing thread via
	FIFO queue; don't listen sockets that in the processing;
	avoid situation when same connection processed in
	the different threads in the same time.
	Note, that udp processing is broken now.
	
	* libsockios: Version 1.9.0

2006-09-20  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libsockios: Version 1.8.1

2006-09-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.h, sockmgr.cc: use vector as container for pollfd structures,
	instead of raw array; move processed socket to the end of pollfd sequence,
	to avoid usurp processing by older connections.

2006-08-21  Petr Ovtchenkov  <ptr@island.corbina.net>

	* sockmgr.cc: the same as 2006-08-18 for poll/select on server side.

2006-08-18  Petr Ovtchenkov  <ptr@island.corbina.net>
