@@ -2,4 +2,4 @@
 
 PRGNAME = sockios_ut
 SRC_CC = unit_test.cc ConnectionProcessor.cc message.cc client.cc client-mw.cc \
-         client-wc.cc close_socket.cc bytes_in_socket.cc read0_on_exec.cc
+         client-wc.cc close_socket.cc bytes_in_socket.cc bytes_in_socket2.cc read0_on_exec.cc
