@@ -1,20 +1,12 @@
-// -*- C++ -*- Time-stamp: <06/10/10 20:35:08 ptr>
+// -*- C++ -*- Time-stamp: <06/10/10 21:31:27 ptr>
 
 /*
  *
  * Copyright (c) 2006
  * Petr Ovtchenkov
  *
- * Licensed under the Academic Free License Version 2.1
+ * Licensed under the Academic Free License version 3.0
  *
- * This material is provided "as is", with absolutely no warranty expressed
- * or implied. Any use is at your own risk.
- *
- * Permission to use, copy, modify, distribute and sell this software
- * and its documentation for any purpose is hereby granted without fee,
- * provided that the above copyright notice appear in all copies and
- * that both that copyright notice and this permission notice appear
- * in supporting documentation.
  */
 
 #include <boost/test/unit_test.hpp>
@@ -33,9 +25,8 @@ using namespace xmt;
 
 /*
  * Server listen tcp socket; client connect to server and write 2
- * bytes, then flush stream; server read 1 byte in one call
- * to 'connect' and should read the remains byte in another call
- * to 'connect' function.
+ * bytes, then flush stream; server read 1 byte in ctor
+ * and should read the remains byte in call to 'connect' function.
  * Test show, that server (sockmgr_stream_MP) call 'connect' if some
  * buffered data remains, and do it without signal on poll.
  */
@@ -45,28 +36,22 @@ extern xmt::Mutex pr_lock;
 
 static Condition cnd;
 
-class ConnectionProcessor4 // dummy variant
+class ConnectionProcessor7 // dummy variant
 {
   public:
-    ConnectionProcessor4( std::sockstream& );
+    ConnectionProcessor7( std::sockstream& );
 
     void connect( std::sockstream& );
     void close();
 };
 
-ConnectionProcessor4::ConnectionProcessor4( std::sockstream& s )
+ConnectionProcessor7::ConnectionProcessor7( std::sockstream& s )
 {
   pr_lock.lock();
   BOOST_MESSAGE( "Server seen connection" );
 
   BOOST_REQUIRE( s.good() );
   pr_lock.unlock();
-
-#if 0
-  /*
-   * Really I have choice: read in constructor, but worry
-   * about stream reading or read only in connect...
-   */
 
   // connect( s );
   // cerr << "Server see connection\n"; // Be silent, avoid interference
@@ -79,13 +64,10 @@ ConnectionProcessor4::ConnectionProcessor4( std::sockstream& s )
   pr_lock.unlock();
 
   BOOST_CHECK( c == '0' );
-#endif
 }
 
-void ConnectionProcessor4::connect( std::sockstream& s )
+void ConnectionProcessor7::connect( std::sockstream& s )
 {
-  static int count = 0;
-
   pr_lock.lock();
   BOOST_MESSAGE( "Server start connection processing" );
 
@@ -99,13 +81,9 @@ void ConnectionProcessor4::connect( std::sockstream& s )
   BOOST_REQUIRE( s.good() );
   pr_lock.unlock();
 
-  if ( count++ == 0 ) {
-    BOOST_CHECK( c == '0' );
-  } else {
-    cnd.set( true );
+  cnd.set( true );
 
-    BOOST_CHECK( c == '3' );
-  }
+  BOOST_CHECK( c == '3' );
 
   pr_lock.lock();
   // BOOST_REQUIRE( s.good() );
@@ -115,22 +93,22 @@ void ConnectionProcessor4::connect( std::sockstream& s )
   return;
 }
 
-void ConnectionProcessor4::close()
+void ConnectionProcessor7::close()
 {
   pr_lock.lock();
   BOOST_MESSAGE( "Server: client close connection" );
   pr_lock.unlock();
 }
 
-void test_more_bytes_in_socket()
+void test_more_bytes_in_socket2()
 {
 // #ifndef __FIT_NO_POLL
   cnd.set( false );
-  sockmgr_stream_MP<ConnectionProcessor4> srv( port ); // start server
+  sockmgr_stream_MP<ConnectionProcessor7> srv( port ); // start server
 
   sockstream sock( "localhost", ::port );
 
-  char c[2] = { '0', '3' };
+  char c[5] = { '0', '3', '4', '5', '6' };
   sock.write( c, 2 );
   sock.flush();
 
