@@ -1,3 +1,9 @@
+2006-10-10  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* sockmgr.cc: user can read from socket immediate
+	in Connect ctor, so check chars in buffer after ctor
+	and push processing queue if available.
+
 2006-09-25  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* sockmgr.h, sockmgr.cc: introduce configuration parameters
